<resources>
    <string name="app_name">M6P2RCordoba</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orb_id_text_placeholder">ID Placeholder</string>
    <string name="orb_name_text_placeholder">Orb name placeholder</string>
    <string name="orb_description_text_placeholder">Orb description text placeholder</string>
    <string name="orb_levels_placeholder">Available spells</string>
    <string name="orb_levels_textview_placeholder">Orb levels placeholder</string>
    <string name="app_name_text">MateriAPI App</string>
    <string name="materia_description_placeholder_text">Materia Description placeholder</string>
    <string name="materia_type_header_placeholder">Materia Type Placeholder</string>
    <string name="toast_error_message">An error occurred: %1$s</string>
    <string name="materia_type_placeholder">Materia Type Placeholder</string>
    <string name="materia_description_placeholder">Materia Description Placeholder</string>
    <string name="api_error_text">Unable to establish connection to API. Check you are connected to the Internet and try again.</string>
    <string name="no_account_text">No account? Create one now</string>
    <string name="email_text">E-mail</string>
    <string name="password_text">Password</string>
    <string name="email_placeholder">name@domain.com</string>
    <string name="login_failed">Login failed</string>
    <string name="password_can_not_empty">Password can not be empty!</string>
    <string name="email_can_not_empty">Email can not be empty!</string>
    <string name="log_out_button">Log Out</string>
    <string name="log_in">Log In</string>
    <string name="account_sign_in_text">Already have an account? Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="reset_password">Reset your Password</string>
    <string name="recoverPassStr">Send password reset email</string>
    <string name="insertEmailRecStr">Please input your email to send the password reset email message</string>
    <string name="sendStr">Send</string>
    <string name="emailLinkStr">Message sent. Check your Spam folder</string>
    <string name="LinkEmailStrFail">Could not send the password reset email</string>
    <string name="InsertEmailStr">Email must not be empty</string>
    <string name="cancelStr">Cancel</string>
    <string name="email_error">Error: Email is not correctly formatted</string>
    <string name="password_invalid">Error: Password is invalid</string>
    <string name="account_exists">An account with this email already exists</string>
    <string name="session_expired">Your session has expired. Please log in again.</string>
    <string name="not_registered">No user found with the requested credentials</string>
    <string name="password_length_invalid">Password must be at least 6 characters</string>
    <string name="no_network">Network not available</string>
    <string name="auth_error">Error authenticating user. Please try again.</string>
</resources>