<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/orbNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/orb_name_text_placeholder"
        app:layout_constraintStart_toEndOf="@+id/orbIDText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orbIDText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/orb_id_text_placeholder"
        app:layout_constraintEnd_toStartOf="@+id/orbNameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orbDescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/orb_description_text_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orbIDText" />

    <TextView
        android:id="@+id/orbLevelsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/orb_levels_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orbDescriptionText" />

    <TextView
        android:id="@+id/orbLevelsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/orb_levels_textview_placeholder"
        app:layout_constraintStart_toEndOf="@+id/orbLevelsText"
        app:layout_constraintTop_toBottomOf="@+id/orbDescriptionText" />
</androidx.constraintlayout.widget.ConstraintLayout>